# ThinksustainAi

./: README.md
BrainAi/SustainAgent/: brain.py  patterns.py  pyproject.toml
BrainAi/thinksustainai/: README.md  pyproject.toml
BrainAi/thinksustainai/src/thinksustainai/: crew.py  main.py
