[tool.poetry]
name = "thinksustainai"
version = "0.1.0"
description = "thinksustainAI using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
thinksustainai = "thinksustainai.main:run"
train = "thinksustainai.main:train"
replay = "thinksustainai.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
